feat(menubar-app): make it into a menubar app and hide the dock icon
also a bunch of cleanup/better icon/fixing lots of little startup bugs

--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,7 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+*.xcodeproj/xcshareddata/xcschemes/
+*.profraw
+CleanSweep.xcodeproj/project.xcworkspace/xcuserdata/
+CleanSweep.xcodeproj/xcuserdata/
