docs(readme): update readme with more correct instructions on how to run

--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,4 @@ Temporary Items
 *.profraw
 CleanSweep.xcodeproj/project.xcworkspace/xcuserdata/
 CleanSweep.xcodeproj/xcuserdata/
+CleanSweep.xcodeproj/project.xcworkspace/xcuserdata
