feat(edit-rules): allow people to edit rules
also move from printing to logging

--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,5 @@ Temporary Items
 CleanSweep.xcodeproj/project.xcworkspace/xcuserdata/
 CleanSweep.xcodeproj/xcuserdata/
 CleanSweep.xcodeproj/project.xcworkspace/xcuserdata
+CleanSweep.xcodeproj/project.xcworkspace/xcuserdata/soehlert.xcuserdatad
+CleanSweep.xcodeproj/xcuserdata/soehlert.xcuserdatad
